aws-letsencrypt/k8s/rancher-ssl-passthrough-template.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: cattle-system
---
apiVersion: v1
kind: Service
metadata:
  namespace: cattle-system
  name: cattle-service
  labels:
    app: cattle
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: cattle
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: cattle-system
  name: cattle-ingress-http
spec:
  rules:
  - http:
      paths:
      - path: /.well-known
        backend:
          serviceName: cattle-service
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: cattle-system
  name: cattle-ingress-https
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"   # Max time in seconds for ws to remain shell window open
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"   # Max time in seconds for ws to remain shell window open
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"      # Enable ssl-passthrough to backend.
spec:
  rules:
  - host: ${fqdn}  # FQDN to access cattle server
    http:
      paths:
      - backend:
          serviceName: cattle-service
          servicePort: 443
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: cattle-system
  name: cattle
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: cattle
    spec:
      serviceAccountName: cattle-admin
      containers:
      - image: ${rancher_image}
        imagePullPolicy: Always
        name: cattle-server
        args:
        - --acme-domain=${fqdn}
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
